# Atlas

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.middleware  README.md  ROADMAP.md  api_service.py  generate_specialized.py  generate_specialized_arabic.py  generate_specialized_data.py  middleware_core.py  mzx_config.yaml  package-lock.json  pyproject.toml  requirements.txt  run_server.bat  specialized.yaml  start_atlas.ps1  train.py
.claude/: settings.local.json
.github/workflows/: ci.yml
Atlas/: .cursorrules  README.md  dashboard_ai.py  intent_engine.py  pyproject.toml  requirements.txt
Atlas/ai_models_direct/: intent_classifier_50k.pkl
Atlas/api/: main.py
Atlas/scripts/: demo_agent.py  deploy_postgres.py  upload_ai_models.py
Atlas/templates/: dashboard.html  index.html  onboarding.html
Atlas/tests/: test_db_concurrency_guardrails.py  test_db_guardrails.py  test_sql_security.py
Atlas/tools/: analyze_db_logs.py  debug_email.py  pdpl_audit.py  verify_pdpl.py
ai_models_direct/: intent_classifier_50k.pkl
api/: __init__.py  main.py
backup/: main_src.py
data/: oracle_fusion_schema.json
db_guardrails/: __init__.py  safe_db_connector.py
docs/: DEPLOYMENT_READINESS_REPORT.md  PRD.md
jazzaam-video/: README.md  STORYBOARD.md  package-lock.json  package.json  tsconfig.json
jazzaam-video/src/: Composition.tsx  Root.tsx
k8s/: deployment.yaml  monitoring.yaml
scripts/: apply_data_classification.py  atlas_chat.py  deploy_mlops.py  deploy_to_server.py  eval_model.py  inject_moat.py  train_model.py
src/mcp-server/: package.json  tsconfig.json
templates/: dashboard.html
tests/unit/: test_api.py  test_atlas_agent.py  test_data_moat.py  (+7 more)
tools/: test_smart_search.py
(+71 files in other folders)
